services/tool-b-envoy/envoy.yaml
static_resources:
  listeners:
    - name: toolb_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /run/spire/svid/svid.pem
                    private_key:
                      filename: /run/spire/svid/svid.key
                validation_context:
                  trusted_ca:
                    filename: /run/spire/svid/bundle.pem
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: toolb_route
                  virtual_hosts:
                    - name: toolb_service
                      domains: ["*"]
                      request_headers_to_add:
                        - header:
                            key: x-spiffe-id
                            value: "%DOWNSTREAM_PEER_URI_SAN%"
                          append: false
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: toolb_upstream
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: toolb_upstream
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: toolb_upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: tool-b
                      port_value: 8080
